--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -44,3 +44,7 @@ body {
 .page-leave-to {
   opacity: .3;
 }
+
+:root {
+  --zigzag-pattern: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="20" viewBox="0 0 100 20"><polyline points="0,10 10,0 20,10 30,0 40,10 50,0 60,10 70,0 80,10 90,0 100,10" fill="none" stroke="gray" stroke-width="2"/></svg>');
+}
